--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
   <div id="loading">⏳ Đang tải dữ liệu...</div>
   <div id="error"></div>
-  <div id="list"></div>
+
+  <h2 class="section-title">🍲 Danh sách bếp 0 đồng</h2>
+  <div id="bep-list"></div>
+
+  <h2 class="section-title">🏨 Danh sách điểm nghỉ 0 đồng</h2>
+  <div id="diemnghi-list"></div>
 
   <script src="script.js"></script>
 </body>
