--- a/index.html
+++ b/index.html
@@ -4,24 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bếp & Điểm Nghỉ 0 Đồng</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Leaflet -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+  <style>
+    body { background: #f5f5f5; }
+    #map { height: 500px; width: 100%; }
+    .loading { text-align: center; padding: 20px; font-size: 20px; color: #777; }
+  </style>
 </head>
-
 <body>
-  <header>
-    <h1>Bếp và điểm nghỉ 0 đồng</h1>
-    <p>Cập nhật tự động từ Google Sheets</p>
-  </header>
 
-  <div id="loading">⏳ Đang tải dữ liệu...</div>
-  <div id="error"></div>
+<div class="container py-4">
 
-  <h2 class="section-title">🍲 Danh sách bếp 0 đồng</h2>
-  <div id="bep-list"></div>
+  <h2 class="mb-3 text-center">Bếp 0 Đồng & Điểm Nghỉ Miễn Phí</h2>
 
-  <h2 class="section-title">🏨 Danh sách điểm nghỉ 0 đồng</h2>
-  <div id="diemnghi-list"></div>
+  <div id="map"></div>
 
-  <script src="script.js"></script>
+  <hr>
+
+  <h4 class="mt-4">Danh sách Bếp 0 đồng</h4>
+  <div id="table-bep" class="loading">Đang tải dữ liệu...</div>
+
+  <hr>
+
+  <h4 class="mt-4">Danh sách Điểm nghỉ miễn phí</h4>
+  <div id="table-diemnghi" class="loading">Đang tải dữ liệu...</div>
+
+</div>
+
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<!-- Script -->
+<script src="script.js"></script>
+
 </body>
 </html>
