--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container py-3">
 
-  <h2>Bếp 0 Đồng & Điểm Nghỉ Miễn Phí</h2>
+  <h2 class="text-center mb-3">Bếp 0 Đồng & Điểm Nghỉ Miễn Phí</h2>
 
   <div id="map"></div>
 
