--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -42,7 +43,7 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <!-- Leaflet MarkerCluster JS -->
-<script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+<script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.js"></script>
 
 <!-- Custom JS -->
 <script src="script.js"></script>
