--- a/index.html
+++ b/index.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bếp 0 Đồng & Điểm Nghỉ Miễn Phí</title>
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <!-- Leaflet -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 
-  <!-- Leaflet MarkerCluster CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
+  <!-- MarkerCluster -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
-
 </head>
+
 <body>
 
-<div class="container py-3">
+  <div class="container py-3">
 
-  <h2 class="text-center mb-3">Bếp 0 Đồng & Điểm Nghỉ Miễn Phí</h2>
+    <h2 class="text-center mb-3">Bếp 0 Đồng & Điểm Nghỉ Miễn Phí</h2>
 
-  <div id="map"></div>
+    <div id="map"></div>
 
-  <hr>
+    <hr>
 
-  <h4>Bảng Bếp 0 Đồng</h4>
-  <div id="table-bep">Đang tải dữ liệu...</div>
+    <h4>Bảng Bếp 0 Đồng</h4>
+    <div id="table-bep">Đang tải dữ liệu...</div>
 
-  <hr>
+    <hr>
 
-  <h4>Bảng Điểm Nghỉ Miễn Phí</h4>
-  <div id="table-diemnghi">Đang tải dữ liệu...</div>
+    <h4>Bảng Điểm Nghỉ Miễn Phí</h4>
+    <div id="table-diemnghi">Đang tải dữ liệu...</div>
 
-</div>
+  </div>
 
-<!-- Leaflet JS -->
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <!-- JS -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
-<!-- Leaflet MarkerCluster JS -->
-<script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.js"></script>
-
-<!-- Custom JS -->
-<script src="script.js"></script>
-
+  <script src="script.js"></script>
 </body>
+
 </html>
