--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 
   <!-- MarkerCluster CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
@@ -27,20 +27,21 @@
   <div id="map"></div>
 
   <hr>
-
-  <h4>Bảng Bếp 0 Đồng</h4>
+  <h4>Bếp 0 Đồng</h4>
   <div id="table-bep">Đang tải dữ liệu...</div>
 
   <hr>
-
-  <h4>Bảng Điểm Nghỉ Miễn Phí</h4>
+  <h4>Điểm Nghỉ Miễn Phí</h4>
   <div id="table-diemnghi">Đang tải dữ liệu...</div>
-
 </div>
 
-<!-- JS -->
+<!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<!-- MarkerCluster JS -->
 <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+
+<!-- Custom JS -->
 <script src="script.js"></script>
 
 </body>
