--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bếp 0 Đồng & Điểm Nghỉ Miễn Phí</title>
 
   <!-- Bootstrap CSS -->
@@ -16,20 +16,21 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container py-3">
   <h2 class="text-center mb-3">Bếp 0 Đồng & Điểm Nghỉ Miễn Phí</h2>
+
   <div id="map"></div>
 
-  <hr />
+  <hr>
 
   <h4>Bảng Bếp 0 Đồng</h4>
   <div id="table-bep">Đang tải dữ liệu...</div>
 
-  <hr />
+  <hr>
 
   <h4>Bảng Điểm Nghỉ Miễn Phí</h4>
   <div id="table-diemnghi">Đang tải dữ liệu...</div>
