--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
-  <!-- MarkerCluster CSS -->
+  <!-- Leaflet MarkerCluster CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
 
@@ -21,6 +21,7 @@
 <body>
 
 <div class="container py-3">
+
   <h2 class="text-center mb-3">Bếp 0 Đồng & Điểm Nghỉ Miễn Phí</h2>
 
   <div id="map"></div>
@@ -34,12 +35,13 @@
 
   <h4>Bảng Điểm Nghỉ Miễn Phí</h4>
   <div id="table-diemnghi">Đang tải dữ liệu...</div>
+
 </div>
 
 <!-- Leaflet JS -->
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-<!-- MarkerCluster JS -->
+<!-- Leaflet MarkerCluster JS -->
 <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
 <!-- Custom JS -->
